# BE-STASH

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  local_server.sh  pyproject.toml  requirements.txt  run_server.sh  setup.sh  tes.py
.github/workflows/: run-testing.yml
api/: app.py  secret.py
api/database/: databaseConnection.py  databaseModel.py
api/models/: response.py
api/research/: locust.py  orm.ipynb
api/routes/: createSchema.py  databaseInsert.py  database_insert.py  deleteCategorySchema.py  getSchema.py  initialization.py  updateCategorySchema.py
api/supabase/: supabase_conection.py  supabase_model.py
api/tests/: testsDatabaseConnection.py
api/utils/: locust.py  requestFormat.py
api/utils/database/: general.py
examples/: async.py  general.py  sync.py
examples/tests/: test_register_user.py
scripts/: activate.sh  load_env.sh  run_container.sh  run_server.sh  run_test.sh
services/postgres/: connection.py  models.py
src/: main.py  secret.py
src/auth/routers/: dependencies.py  exceptions.py  health_check.py
src/database/: connection.py  models.py
src/requirements/: dev.txt
src/routers/: health_check.py
src/schema/: custom_state.py  request_format.py  response.py  validator.py
static/css/: style.css
templates/: account_activation.html  base.html  email_activation.html  home.html  otp_email.html  update_pin_email.html  update_pin_email_and_phone_number.html  welcome.html
tests/e2e/: initialization.py
tests/unit_test/: test_query_find_record.py  test_query_insert_record.py  test_query_update_record.py
utils/: custom_error.py  exception_handler.py  generator.py  helper.py  jwt.py  logger.py  request_format.py  smtp.py  validator.py  whatsapp_api.py
utils/database/: general.py
utils/forgot_password/: general.py
utils/jwt/: general.py
utils/query/: general.py
utils/sso/: general.py
(+200 files in other folders)
