[tool.poetry]
name = "dependencies-finance-bas"
version = "0.1.0"
description = "A package management tool Proof of Concept (POC) for private money management system developed using fastapi for development stages."
authors = ["armananta <armanantabastian@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.1"
pytz = "^2024.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
locust = "^2.29.1"
ruff = "^0.5.1"
uuid7 = "^0.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
faker = "^26.0.0"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
