[tool.poetry]
name = "dependencies-finance-bas"
version = "0.1.0"
description = "A package management tool Proof of Concept (POC) for private money management system developed using fastapi for development stages."
authors = [
    "Bastian Armananta <armanantabastian@gmail.com>",
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.4"}
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
pytz = "^2024.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
python-jose = "^3.3.0"
faker = "^33.1.0"
bcrypt = "^4.2.1"
coverage = "^7.6.10"
pre-commit = "^4.0.1"
authlib = "^1.4.0"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
